# uncle

./: .gitignore  cabal.project  todo.txt  uncle.cabal
app/: Main.hs  createFlks.hs  hrecords.hs
src/: Datatypes.hs  Excel.hs  Paradox.hs
