cabal-version:      3.0
name:               uncle
version:            0.1.0.0
license:            NONE
author:             Philip Immelman
maintainer:         pimmelman@clientele.co.za

library
    exposed-modules: 
        Paradox,
        Datatypes,
        Excel

    -- Modules included in this library but not exported.
    -- other-modules:

    build-depends:
        base ^>=4.16.4.0,
        binary,
        bytestring,
        array,
        xlsx,
        text,
        filepath
    
    hs-source-dirs:   src
    default-language: Haskell2010

executable uncle
    main-is:          Main.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        uncle,
        bytestring,
        binary,
        pretty-simple

    hs-source-dirs:   app
    default-language: Haskell2010

executable createFlks
    main-is:          createFlks.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        uncle

    hs-source-dirs:   app
    default-language: Haskell2010

executable hrecords
    main-is:          hrecords.hs

    -- Modules included in this executable, other than Main.
    -- other-modules:

    -- LANGUAGE extensions used by modules in this package.
    -- other-extensions:
    build-depends:
        base ^>=4.16.4.0,
        uncle,
        HList

    hs-source-dirs:   app
    default-language: Haskell2010

test-suite uncle-test
    default-language: Haskell2010
    type:             exitcode-stdio-1.0
    hs-source-dirs:   test
    main-is:          MyLibTest.hs
    build-depends:    base ^>=4.16.4.0
